--- a/src/app/v2/components/sugeridos/sugeridos.component.html
+++ b/src/app/v2/components/sugeridos/sugeridos.component.html
@@ -85,7 +85,7 @@
       <!-- Startups: tienen 'descripcionStartup' -->
       <ng-container *ngIf="item?.descripcionStartup">
         <app-startup-item 
-          class="block bg-white  shadow-sm hover:shadow-md transition-all duration-300 transform hover:-translate-y-1 border-l-4 border-amber-500" 
+          class="block bg-white  shadow-sm hover:shadow-md transition-all duration-300 transform hover:-translate-y-1 border-l-4 border-[#fbcc2c]" 
           [simplified]="true" 
           [data]="item" 
           (openModal)="openModal(i)">
