--- a/src/app/v2/components/course-item/course-item.component.html
+++ b/src/app/v2/components/course-item/course-item.component.html
@@ -1,15 +1,15 @@
 @if (simplified) {
-<article class="p-4 rounded-lg transition-all duration-300">
+<article class="p-4  transition-all duration-300">
   <!-- Título con efecto de hover suave -->
   <h3 class="text-xl font-bold mb-2 text-gray-800 group-hover:text-blue-600">{{ data?.titulo }}</h3>
   
   <!-- Etiquetas con estilos mejorados -->
   <div class="mb-2 flex flex-wrap gap-1">
     @if (data?.modalidad) {
-      <span class="bg-blue-100 text-blue-800 text-xs px-2 py-1 rounded-full">{{ data?.modalidad }}</span>
+      <span class="bg-blue-100 text-blue-800 text-xs px-2 py-1 ">{{ data?.modalidad }}</span>
     }
     @if (data?.duracion) {
-      <span class="bg-yellow-100 text-yellow-800 text-xs px-2 py-1 rounded-full">{{ data?.duracion }}</span>
+      <span class="bg-yellow-100 text-yellow-800 text-xs px-2 py-1 ">{{ data?.duracion }}</span>
     }
   </div>
   
@@ -36,7 +36,7 @@
 </article>
 } @else {
 <article
-  class="group p-5 border border-gray-100 rounded-lg hover:shadow-md transition-all duration-300"
+  class="group p-5 border border-gray-100  hover:shadow-md transition-all duration-300"
   (click)="onOpenModal()"
   (keypress.enter)="onOpenModal()"
   (keypress.space)="onOpenModal()"
@@ -54,7 +54,7 @@
   <!-- Badge de recomendación con estilo mejorado -->
   @if (data?.recomendado) {
   <p class="text-md text-gray-700 pb-2 flex items-center">
-    <span class="text-yellow-500 mr-1">
+    <span class="text-[#fbcc2c] mr-1">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
         <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
       </svg>
@@ -66,22 +66,22 @@
   <!-- Etiquetas con estilos mejorados -->
   <div class="mb-3 flex flex-wrap gap-2">
     @if (data?.idioma?.toLowerCase() === 'ingles') {
-    <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs rounded-md"> En Inglés </span>
+    <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs "> En Inglés </span>
     } 
     @if (data?.tipo?.toLowerCase() === 'de pago') {
-    <span class="bg-amber-50 text-amber-600 px-2 py-1 text-xs rounded-md"> De Pago </span>
+    <span class="bg-amber-50 text-amber-600 px-2 py-1 text-xs "> De Pago </span>
     } 
     @if (data?.tipo?.toLowerCase() === 'gratuito') {
-    <span class="bg-green-50 text-green-600 px-2 py-1 text-xs rounded-md"> Gratuito </span>
+    <span class="bg-green-50 text-green-600 px-2 py-1 text-xs "> Gratuito </span>
     } 
     @if(data?.modalidad?.toLowerCase() === 'online'){
-    <span class="bg-indigo-50 text-indigo-600 px-2 py-1 text-xs rounded-md"> Online </span>
+    <span class="bg-indigo-50 text-indigo-600 px-2 py-1 text-xs "> Online </span>
     } 
     @if (data?.modalidad?.toLowerCase() === 'presencial') {
-    <span class="bg-purple-50 text-purple-600 px-2 py-1 text-xs rounded-md"> Presencial </span>
+    <span class="bg-purple-50 text-purple-600 px-2 py-1 text-xs "> Presencial </span>
     } 
     @for (tipo of data.tipo_de_conocimiento; track $index) {
-    <span class="bg-gray-50 text-gray-600 px-2 py-1 text-xs rounded-md">
+    <span class="bg-gray-50 text-gray-600 px-2 py-1 text-xs ">
       {{ tipo }}
     </span>
     }
