--- a/src/app/v2/components/financing-item/financing-item.component.html
+++ b/src/app/v2/components/financing-item/financing-item.component.html
@@ -1,18 +1,18 @@
 @if (simplified) {
-<article class="p-4 rounded-lg transition-all duration-300">
+<article class="p-4  transition-all duration-300">
   <!-- Título con estilo mejorado -->
   <h3 class="text-xl font-bold mb-2 text-gray-800 group-hover:text-green-600">{{ data?.titulo }}</h3>
   
   <!-- Etiquetas con estilo mejorado -->
   <div class="mb-2 flex flex-wrap gap-1">
     @if (data?.porcentaje_cobertura) {
-      <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">{{ data?.porcentaje_cobertura }}% cobertura</span>
+      <span class="bg-green-100 text-green-800 text-xs px-2 py-1 ">{{ data?.porcentaje_cobertura }}% cobertura</span>
     }
     @if (data?.institucion) {
-      <span class="bg-green-50 text-green-700 text-xs px-2 py-1 rounded-full">{{ data?.institucion }}</span>
+      <span class="bg-green-50 text-green-700 text-xs px-2 py-1 ">{{ data?.institucion }}</span>
     }
     @if (data?.recomendado) {
-      <span class="bg-green-100 text-green-800 text-xs px-2 py-1 rounded-full">Recomendado</span>
+      <span class="bg-green-100 text-green-800 text-xs px-2 py-1 ">Recomendado</span>
     }
   </div>
   
@@ -39,7 +39,7 @@
 </article>
 }@else {
 <div
-  class="group p-5 border border-gray-100 rounded-lg hover:shadow-md transition-all duration-300"
+  class="group p-5 border border-gray-100  hover:shadow-md transition-all duration-300"
   (click)="onOpenModal()"
   (keypress.enter)="onOpenModal()"
   (keypress.space)="onOpenModal()"
@@ -56,7 +56,7 @@
   
   @if (data?.recomendado) {
   <p class="text-md text-gray-700 pb-2 flex items-center">
-    <span class="text-yellow-500 mr-1">
+    <span class="text-[#fbcc2c] mr-1">
       <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
         <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z" />
       </svg>
@@ -68,19 +68,19 @@
   <!-- Etiquetas con estilo mejorado -->
   <div class="mb-3 flex flex-wrap gap-2">
     @if (data.tipo_financiamiento.toLowerCase() === 'público') {
-      <span class="bg-green-50 text-green-600 px-2 py-1 text-xs rounded-md">Financiamiento: Público</span>
+      <span class="bg-green-50 text-green-600 px-2 py-1 text-xs ">Financiamiento: Público</span>
     }
     @if (data.tipo_financiamiento.toLowerCase() === 'privado') {
-      <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs rounded-md">Financiamiento: Privado</span>
+      <span class="bg-blue-50 text-blue-600 px-2 py-1 text-xs ">Financiamiento: Privado</span>
     }
     @if (data.institucion) {
-      <span class="bg-gray-50 text-gray-700 px-2 py-1 text-xs rounded-md">Institución: {{ data.institucion }}</span>
+      <span class="bg-gray-50 text-gray-700 px-2 py-1 text-xs ">Institución: {{ data.institucion }}</span>
     }
     @if (data.categoria) {
-      <span class="bg-amber-50 text-amber-700 px-2 py-1 text-xs rounded-md">Categoría: {{ data.categoria }}</span>
+      <span class="bg-amber-50 text-amber-700 px-2 py-1 text-xs ">Categoría: {{ data.categoria }}</span>
     }
     @if (data.porcentaje_cobertura) {
-      <span class="bg-emerald-50 text-emerald-700 px-2 py-1 text-xs rounded-md flex items-center">
+      <span class="bg-emerald-50 text-emerald-700 px-2 py-1 text-xs  flex items-center">
         <svg xmlns="http://www.w3.org/2000/svg" class="h-3 w-3 mr-1" viewBox="0 0 20 20" fill="currentColor">
           <path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-14a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V4z" clip-rule="evenodd" />
         </svg>
