--- a/src/app/v2/components/financing-modal/financing-modal.component.html
+++ b/src/app/v2/components/financing-modal/financing-modal.component.html
@@ -5,17 +5,17 @@
 >
   <div class="relative w-full max-w-4xl max-h-full">
     <!-- Modal content -->
-    <div class="relative bg-white rounded-lg shadow">
+    <div class="relative bg-white  shadow">
       <!-- Modal header -->
       <div
-        class="flex items-center justify-between p-4 md:p-5 border-b rounded-t"
+        class="flex items-center justify-between p-4 md:p-5 border-b "
       >
         <h3 class="text-xl font-semibold text-blue-900">
           {{ data.titulo }}
         </h3>
         <button
           type="button"
-          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900  text-sm w-8 h-8 ms-auto inline-flex justify-center items-center"
           data-modal-hide="large-modal"
           (click)="onClose()"
         >
@@ -78,14 +78,14 @@
       <!-- Modal footer -->
       <div
         style="width: 100%; justify-content: right"
-        class="flex items-center p-4 md:p-5 space-x-3 rtl:space-x-reverse border-t border-gray-200 rounded-b"
+        class="flex items-center p-4 md:p-5 space-x-3 rtl:space-x-reverse border-t border-gray-200 "
       >
         <button
           data-modal-hide="large-modal"
           type="button"
           (click)="resourseService.openLink(data.link)"
           style="gap: 6px; padding: 8px 16px"
-          class="border border-blue-100 text-blue bg-blue-white hover:bg-white-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center"
+          class="border border-blue-100 text-blue bg-blue-white hover:bg-white-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium  text-sm px-5 py-2.5 text-center inline-flex items-center"
         >
           <svg
             class="w-6 h-6 text-blue-800"
@@ -109,7 +109,7 @@
         <button
           type="button"
           (click)="onShowNext()"
-          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+          class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium  text-sm px-5 py-2.5 text-center inline-flex items-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         >
           Siguiente
           <svg
