--- a/src/app/v2/modules/form-register/form-register.component.scss
+++ b/src/app/v2/modules/form-register/form-register.component.scss
@@ -13,7 +13,7 @@
     padding: 8px;
     
     &::file-selector-button {
-      @apply px-4 py-2 mr-4 text-sm font-medium text-gray-700 bg-gray-50 border border-gray-300 rounded-lg cursor-pointer hover:bg-gray-100 transition-colors;
+      @apply px-4 py-2 mr-4 text-sm font-medium text-gray-700 bg-gray-50 border border-gray-300  cursor-pointer hover:bg-gray-100 transition-colors;
     }
   }
   
