--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -17,7 +17,7 @@
 <!--Section registro-->
 <app-selection-register></app-selection-register>
 <!-- Section podcasts-->
-<section class="bg-gradient-to-br from-yellow-500/90 to-yellow-400/80 py-16">
+<section class="bg-gradient-to-br from-[#fbcc2c]/90 to-yellow-400/80 py-16">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col gap-12 lg:flex-row items-center">
       <div class="lg:w-1/2">
@@ -29,7 +29,7 @@
         </p>
         <a
           routerLink="/investigacion-podcasts"
-          class="inline-flex items-center bg-gray-900 text-white py-3 px-8 rounded-full shadow-lg hover:shadow-xl transition-all duration-300 hover:translate-y-[-2px]"
+          class="inline-flex items-center bg-gray-900 text-white py-3 px-8  shadow-lg hover:shadow-xl transition-all duration-300 hover:translate-y-[-2px]"
         >
           Ir a Escuchar
           <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 ml-2" viewBox="0 0 20 20" fill="currentColor">
@@ -41,7 +41,7 @@
         <img
           src="assets/podcast.webp"
           alt="Podcast"
-          class="rounded-2xl shadow-2xl transform hover:scale-105 transition-transform duration-300"
+          class=" shadow-2xl transform hover:scale-105 transition-transform duration-300"
           width="auto"
           height="auto"
           loading="eager"
@@ -57,7 +57,7 @@
       <!-- Sección de título y descripción -->
       <div class="lg:text-center mb-16">
         <h2
-          class="font-heading mb-4 bg-gradient-to-r from-yellow-500 to-yellow-400 inline-block px-6 py-2 rounded-full text-sm font-medium tracking-wider text-gray-900 uppercase"
+          class="font-heading mb-4 bg-gradient-to-r from-[#fbcc2c] to-yellow-400 inline-block px-6 py-2  text-sm font-medium tracking-wider text-gray-900 uppercase"
         >
           ¿Qué es Nuevo los lagos?
         </h2>
@@ -76,10 +76,10 @@
       <!-- Grid de características -->
       <div class="mt-10">
         <dl class="grid grid-cols-1 gap-8 md:grid-cols-2 lg:grid-cols-3">
-          <div class="bg-gray-50 p-8 rounded-2xl hover:shadow-lg transition-all duration-300">
+          <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-yellow-500/10 p-3 rounded-xl">
-                <svg class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#fbcc2c]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -90,10 +90,10 @@
               en la región de Los Lagos.
             </p>
           </div>
-          <div class="bg-gray-50 p-8 rounded-2xl hover:shadow-lg transition-all duration-300">
+          <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-yellow-500/10 p-3 rounded-xl">
-                <svg class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#fbcc2c]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -104,10 +104,10 @@
               para el desarrollo de profesionales.
             </p>
           </div>
-          <div class="bg-gray-50 p-8 rounded-2xl hover:shadow-lg transition-all duration-300">
+          <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-yellow-500/10 p-3 rounded-xl">
-                <svg class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#fbcc2c]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -118,10 +118,10 @@
               en ofrecer información útil a las empresas.
             </p>
           </div>
-          <div class="bg-gray-50 p-8 rounded-2xl hover:shadow-lg transition-all duration-300">
+          <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-yellow-500/10 p-3 rounded-xl">
-                <svg class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#fbcc2c]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -132,10 +132,10 @@
               información relevante para el sector empresarial.
             </p>
           </div>
-          <div class="bg-gray-50 p-8 rounded-2xl hover:shadow-lg transition-all duration-300">
+          <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-yellow-500/10 p-3 rounded-xl">
-                <svg class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#fbcc2c]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
@@ -148,10 +148,10 @@
               desarrollo de la industria en la región de Los Lagos.
             </p>
           </div>
-          <div class="bg-gray-50 p-8 rounded-2xl hover:shadow-lg transition-all duration-300">
+          <div class="bg-gray-50 p-8  hover:shadow-lg transition-all duration-300">
             <div class="flex items-center mb-4">
-              <div class="bg-yellow-500/10 p-3 rounded-xl">
-                <svg class="w-6 h-6 text-yellow-500" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+              <div class="bg-[#fbcc2c]/10 p-3 ">
+                <svg class="w-6 h-6 text-[#fbcc2c]" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
                 </svg>
               </div>
