--- a/src/app/v2/modules/landing-page2/landing-page2.component.html
+++ b/src/app/v2/modules/landing-page2/landing-page2.component.html
@@ -12,7 +12,7 @@
         type="text"
         [(ngModel)]="searchQuery"
         placeholder="Ingresa palabras claves a buscar..."
-        class="flex-1 hidden rounded-l-md rounded-r-md md:rounded-r-none py-3 px-4 w-full text-gray-700 focus:outline-none"
+        class="flex-1 hidden -md -md md:-none py-3 px-4 w-full text-gray-700 focus:outline-none"
       />
       <button
         href="/buscador"
@@ -38,7 +38,7 @@
     <ul class="space-y-4">
       <li
         *ngFor="let result of results"
-        class="p-4 bg-white rounded-md border border-gray-200 shadow-sm"
+        class="p-4 bg-white  border border-gray-200 shadow-sm"
       >
         {{ result }}
       </li>
@@ -109,7 +109,7 @@
 </section>
 
 <!-- Section podcasts-->
-<section class="bg-yellow-500 py-10">
+<section class="bg-[#fbcc2c] py-10">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="flex flex-col gap-12 lg:flex-row items-center">
       <div class="lg:w-1/2">
@@ -121,7 +121,7 @@
         </p>
         <a
           routerLink="/investigacion-podcasts"
-          class="bg-gray-800 text-white py-3 px-6 rounded-lg shadow-lg hover:shadow-xl transition duration-200"
+          class="bg-gray-800 text-white py-3 px-6  shadow-lg hover:shadow-xl transition duration-200"
           >Ir a Escuchar
         </a>
       </div>
