--- a/src/app/v2/styles/custom.scss
+++ b/src/app/v2/styles/custom.scss
@@ -27,13 +27,13 @@
     @apply grid gap-x-8 gap-y-12 sm:gap-y-16 md:grid-cols-2 lg:grid-cols-3;
   }
   .registro-card {
-    @apply relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 sm:mx-auto sm:max-w-sm sm:rounded-lg sm:px-10;
+    @apply relative cursor-pointer overflow-hidden bg-white px-6 pt-10 pb-8 shadow-xl ring-1 ring-gray-900/5 transition-all duration-300 sm:mx-auto sm:max-w-sm sm: sm:px-10;
     &:hover {
       @apply -translate-y-1 shadow-2xl;
     }
   }
   .registro-card-bg {
-    @apply absolute top-10 z-0 h-20 w-20 rounded-full transition-all duration-300;
+    @apply absolute top-10 z-0 h-20 w-20  transition-all duration-300;
     background-color: rgb(31 41 55 / var(--tw-bg-opacity));
     .registro-card:hover & {
       @apply scale-[10];
@@ -43,7 +43,7 @@
     @apply relative z-10 mx-auto max-w-md;
   }
   .registro-card-icon {
-    @apply grid h-20 w-20 place-items-center rounded-full transition-all duration-300;
+    @apply grid h-20 w-20 place-items-center  transition-all duration-300;
     background-color: rgb(31 41 55 / var(--tw-bg-opacity));
     .registro-card:hover & {
       background-color: rgb(234 179 8 / var(--tw-bg-opacity));
@@ -80,7 +80,7 @@
     @apply relative grid grid-cols-1 text-center gap-y-8 sm:gap-y-10 md:gap-y-12 md:grid-cols-3 gap-x-12;
   }
   .step-item-circle {
-    @apply flex items-center justify-center w-16 h-16 mx-auto bg-white border-2 border-gray-200 rounded-full shadow;
+    @apply flex items-center justify-center w-16 h-16 mx-auto bg-white border-2 border-gray-200  shadow;
   }
   .step-item-number {
     @apply text-xl font-semibold text-gray-700;
@@ -111,10 +111,10 @@
   }
 
   .btn-primary-yellow {
-    @apply inline-block bg-[#EAB308] text-white font-semibold py-3 px-6 rounded-md hover:bg-yellow-600 transition-colors;
+    @apply inline-block bg-[#EAB308] text-white font-semibold py-3 px-6  hover:bg-yellow-600 transition-colors;
   }
 
   .btn-primary-white {
-    @apply inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center rounded-lg   focus:ring-4  border border-yellow-500  hover:border-yellow-600 hover:bg-yellow-500;
+    @apply inline-flex items-center justify-center px-5 py-3 mr-3 text-base font-medium text-center    focus:ring-4  border border-[#fbcc2c]  hover:border-yellow-600 hover:bg-[#fbcc2c];
   }
 }
